@@ -1,3 +1,6 @@
+2020-05-21  Markus Gans  <guru.mail@muenster.de>
+	* Fixed the event queue in FApplication
+
 2020-05-16  Markus Gans  <guru.mail@muenster.de>
 	* More direct access to the static FTerm functions
 
